fix; datepicker `align` prop is removed #217

--- a/src/styles/Datepicker.module.css
+++ b/src/styles/Datepicker.module.css
@@ -6,7 +6,8 @@
 }
 .levelsGroup {
   flex-direction: column;
-  align-items: center;
+  padding-top: 12px;
+  /* align-items: center; */
   @media (min-width: $mantine-breakpoint-sm) {
     flex-direction: row;
   }
